<resources>
    <string name="app_name">Poll and Vote</string>
    <string name="buttom_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="account_information">Account Information</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="poll">Poll</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="help">Help &amp; Contact us</string>
    <string name="passwords">Passwords</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="cancel">Cancel</string>
    <string name="name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="appMode">App theme</string>
    <string name="dark_mode_light_mode">Dark mode / Light mode</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="default_btn">Default</string>
    <string name="signup_options">SignUp Options  </string>
    <string name="skip_signup">Skip Signup</string>
    <string name="signup_google">Signup Google</string>
    <string name="google_sign_in">Google SignIn</string>
    <string name="sign_in_with_google">SignIn with Google</string>
    <string name="facebook_login">"Continue with Facebook"</string>
    <string name="search_here">.    Search here…</string>
    <string name="skip">Skip now</string>
    <string name="feedback">Feedback</string>
    <string name="your_feedback_is_important">Your feedback is important</string>
    <string name="submit">Submit</string>
    <string name="submit_and_logout">Submit and Logout</string>
    <string name="dbname_questionnairedata">QuestionnaireData</string>
    <string name="following">Following</string>

    <!--    poll db names-->

    <string name="dbname_question">question</string>
    <string name="dbname_options">options</string>
    <string name="dbname_polloption">pollOption</string>
    <string name="dbname_count">count</string>
    <string name="dbname_adminpolldata">AdminPollData</string>
    <string name="dbname_totalcount">totalCount</string>

    <string-array name="languages">
        <item>radio</item>
        <item>checkbox</item>
    </string-array>
</resources>
