<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_poll"
        android:icon="@drawable/baseline_poll"
        android:title="@string/poll"
        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_question"
        android:title="@string/questionnaire" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_info"
        android:title="@string/buttom_profile" />

</menu>