<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        android:background="@drawable/login_background"
        android:layout_height="wrap_content">




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/baseline_user"
                    android:hint="@string/name"
                    android:textColor="@color/white"
                    android:textColorHint="#FFB300" />
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/white"
                android:src="@drawable/ic_account_circle"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/baseline_user"
                    android:hint="@string/e_mail"
                    android:textColor="@color/white"
                    android:textColorHint="#FFB300" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/admin_regi_password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:drawableEnd="@drawable/ic_password_toggle"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:drawableStart="@drawable/baseline_password"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onRegisterPasswordToggleClick" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/admin_confirm_password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:drawableEnd="@drawable/ic_password_toggle"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:drawableStart="@drawable/baseline_password"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onRegisterConfirmPasswordToggleClick" />
            </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/login_Tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:onClick="onTabClick" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submitButton"
            android:layout_width="266dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

    </LinearLayout>



</merge>