<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linLay_account"
            android:weightSum="10"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/white_rectangle_circle_corner"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_account_circle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/account"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_arrow"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLay_preferences"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/white_rectangle_circle_corner"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_preferences"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/preferences"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_arrow"/>



        </LinearLayout>


        <LinearLayout
            android:id="@+id/linLay_help"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/white_rectangle_circle_corner"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_help"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/help"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_arrow"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLay_password"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/white_rectangle_circle_corner"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_passwords"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/passwords"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_arrow"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLay_logout"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/white_rectangle_circle_corner"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_logout"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/logout"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_arrow"/>



        </LinearLayout>


    </LinearLayout>


</merge>